--- a/ansible/provision-node.yml
+++ b/ansible/provision-node.yml
@@ -15,6 +15,7 @@
             - wget
             - curl
             - apt-transport-https
+            - gnupg2
 
       - name: Add docker apt repository key
         apt_key:
@@ -40,7 +41,7 @@
             name: vagrant
             group: docker
 
-      - name: Disable swapp
+      - name: Disable swap
         command: sed -i '/swap/d' /etc/fstab
 
       - name: Disable swap
